@@ -7,20 +7,21 @@ project(DAnCE_Plan_Launcher_Impl) : install_lib, dance_lib, dance_logger, dance_
                             dance_domainapplicationmanager_stub, \
                             dance_nodeapplication_stub, \
                             dance_nodeapplicationmanager_stub, \
-                            dance_nodemanager_stub {
+                            dance_nodemanager_stub, dance_stub {
 
   dynamicflags += DANCE_PLAN_LAUNCHER_BUILD_DLL
 
   Source_Files {
     EM_Launcher.cpp
     NM_Launcher.cpp
+    LM_Launcher.cpp
   }
-  
+
   Template_Files {
     Plan_Launcher_Base_Impl_T.cpp
   }
 }
-        
+
 project(Plan_Launcher_Exec) : install, dance_exe, dance_plan_launcher {
   exename = dance_plan_launcher
   Source_Files {
